# libcamera-streamer

./: .clang-format  .editorconfig  CMakeLists.txt  Folder.DotSettings  LibcameraStreamerLib.cmake  README.md
examples/: main.cpp
include/libcamera-streamer/: camera_options.hpp  encoder_options.hpp  libcamera_streamer.h  libcamera_streamer.hpp  output_options.hpp  streamer_configuration.hpp
src/: camera_wrapper.cpp  camera_wrapper.h  camera_wrapper.hpp  h264_encoder.cpp  h264_encoder.h  h264_encoder.hpp  libcamera_streamer.cpp  output_item.hpp  stream_info.hpp
